// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
.emotion-0 {
  display: block;
  margin: 0;
  margin-bottom: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #192532;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
}

<div>
  <h1
    class="emotion-0"
    data-test-id="cf-ui-heading"
  >
    Heading
  </h1>
</div>
`;

exports[`renders the component h3 1`] = `
.emotion-0 {
  display: block;
  margin: 0;
  margin-bottom: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #192532;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
}

<div>
  <h1
    class="emotion-0"
    data-test-id="cf-ui-heading"
  >
    Heading
  </h1>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
.emotion-0 {
  display: block;
  margin: 0;
  margin-bottom: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #192532;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
}

<div>
  <h1
    class="my-extra-class emotion-0"
    data-test-id="cf-ui-heading"
  >
    Heading
  </h1>
</div>
`;
